// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Dog: Represents a dog belonging to an owner, with specific details needed for walks.
Owner: Represents a dog owner who can register themselves and their pets.
Payment: Handles the payment details for each completed walk.
WalkSchedule: Records the schedule of dog walks including matching walker with owner and dog.
Walker: Represents a dog walker who can register and manage walk requests.
'''
}

Table Dog {
    id INTEGER [primary key]
    owner_id INTEGER 
    name VARCHAR 
    breed VARCHAR 
    size VARCHAR 
    notes VARCHAR 
    created_date DATE 
    updated_date DATE 
    created_by VARCHAR 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    created_date DATE 
    updated_date DATE 
    created_by VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    walk_schedule_id INTEGER 
    amount FLOAT 
    date_paid DATE 
    created_date DATE 
    updated_date DATE 
    created_by VARCHAR 
    }

Table WalkSchedule {
    id INTEGER [primary key]
    walker_id INTEGER 
    owner_id INTEGER 
    dog_id INTEGER 
    date_requested DATE 
    status VARCHAR 
    created_date DATE 
    updated_date DATE 
    created_by VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    postal_code VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    max_dogs_per_walk INTEGER 
    base_price FLOAT 
    availability VARCHAR 
    created_date DATE 
    updated_date DATE 
    created_by VARCHAR 
    }



// Relationships
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: Payment.(walk_schedule_id) < WalkSchedule.(id)
    Ref: WalkSchedule.(dog_id) < Dog.(id)
    Ref: WalkSchedule.(owner_id) < Owner.(id)
    Ref: WalkSchedule.(walker_id) < Walker.(id)
